--- a/Olumide/Olumy.html
+++ b/Olumide/Olumy.html
@@ -5,8 +5,8 @@
 </head>
 
 <body>
-<h1> This is a Github Test </h1>
-<P>Anoyher adjustment for GitHubgit</P>
+<h1> This is Olumide Test </h1>
+<P>Another adjustment for GitHubgit</P>
 </body>
 
 </html>
