Added colours and Functions

--- a/sammy/sammy.html
+++ b/sammy/sammy.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="sammy.css">
+    <script src="./sammy.js" defer></script>
     <title>Sammy</title>
 </head>
 <body>
