--- a/abdully/abdul.html
+++ b/abdully/abdul.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="sammy.css">
-    <title>Sammy</title>
+    <link rel="stylesheet" href="abdul.css">
+    <script src="./abdul.js"></script>
+    <title>Good Morning Mr Abdul......</title>
 </head>
 <body>
     <h1>This is Abdul Html flile</h1>
