--- a/Olumide/Olumy.html
+++ b/Olumide/Olumy.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head> 
-<title> This is a Basic Test </title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-<h1> This is Olumide Test </h1>
-<P>Another adjustment for GitHubgit</P>
+    <h1>this is olumide code</h1>
 </body>
-
 </html>
