git added style and funtion

--- a/Olumide/Olumy.html
+++ b/Olumide/Olumy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Olumide</title>
+    <link rel="stylesheet" href="Olumy.css">
+    <script src="./Olumide.js" defer></script>
 </head>
 <body>
-    <h1>this is olumide code</h1>
+    <h1>This is olumide code</h1>
 </body>
 </html>
