Testing out Pull request

--- a/sammy/sammy.html
+++ b/sammy/sammy.html
@@ -4,8 +4,13 @@
     <link rel="stylesheet" href="sammy.css">
     <script src="./sammy.js" defer></script>
     <title>Sammy</title>
+    <style></style>
 </head>
 <body>
-    <h1>This is Samuel's Html flile</h1>
+    <h1 >This is Samuel's Html flile</h1>
+    <h1>Interactive Examples</h1>
+    <p id="text">This is some Text</p>
+    <button id="updateButton">Click me</button>
+    <button id="highlightButton">Highlight Text</button>
 </body>
 </html>
